# projects-portfolio-app

./: .dockerignore  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  Makefile  README.md  docker-compose.yaml  prepare-django-db.sh  pyproject.toml  skills-lock.json
app/: robots.py  seo.py  settings.py  sitemaps.py  urls.py
blog/: admin.py  apps.py  models.py  tests.py  views.py
blog/migrations/: 0001_initial.py  0002_blogpostembedding.py
experiences/: admin.py  apps.py  models.py  tests.py  views.py
experiences/fixtures/: README.md  initial_experiences.json
experiences/migrations/: 0001_initial.py
projects/: models.py  tests.py  views.py
static/css/: base.css  blog-list.css  blog-record.css  code-style.css  experiences.css  icons.css  projects.css  theme.css
static/js/: blog-list.js  blog-record.js  experiences.js  mobile-nav.js  projects.js  tailwind-config.js
staticfiles/js/: landing.js  tailwind-config.js
templates/: 403.html  404.html  500.html  base.html
templates/blog/: _post_cards.html  detail.html  list.html
templates/experiences/: list.html
templates/projects/: landing.html  projects.html
