[project]
name = "projects-portfolio-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "psycopg2-binary>=2.9.11",
]

[tool.setuptools]
py-modules = []
